<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_change_pwd"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/change_password"/>
    <item
        android:id="@+id/menu_privacy"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/privacy"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/logout"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/exit"/>
</menu>