<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.sidera.meetsfood.PasswordChangeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_richiesta_attivazione"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
       />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.14"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:weightSum="1"
        android:layout_below="@+id/toolbar_richiesta_attivazione">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_richiedi_accesso_info"
            android:id="@+id/title_richiedi_accesso" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="30px" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_email"
            android:id="@+id/title_email_accesso_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/input_email_accesso" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_cell_accesso"
            android:id="@+id/title_cell_accesso_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/input_cell_accesso" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_cardid_accesso"
            android:id="@+id/title_cardid_accesso_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input_cardid_accesso" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_pan_accesso"
            android:id="@+id/title_pan_accesso_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input_pan_accesso" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="30px" />

        <Button android:id="@+id/richiesta_attivazione_button"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/action_richiedi_accesso"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>


</RelativeLayout>
