<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.sidera.meetsfood.PasswordChangeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_pwd_change"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
       />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.14"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:weightSum="1"
        android:layout_below="@+id/toolbar_pwd_change">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_password_old"
            android:id="@+id/title_pwd_old_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/input_pwd_old" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_password_new"
            android:id="@+id/title_pwd_new_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/input_pwd_new" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_password_new_1"
            android:id="@+id/title_pwd_new_1_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/input_pwd_new_1" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="30px" />

        <Button android:id="@+id/change_pwd_button"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/action_change_pwd"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>


</RelativeLayout>
